enable scheduled builds

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,9 +5,8 @@ on:
     # Publish `master` as Docker `latest` image.
     branches:
       - master
-
-  # Run tests for any PRs.
-  pull_request:
+  schedule:
+    - cron:  '0 6 2 * *'
 
 env:
   IMAGE_NAME: rainloop
